force-app/main/default/objects/ssot__MarketAudience__dlm/fields/ssot__MarketAudienceStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__MarketAudienceStatus__c</fullName>
    <label>Market Audience Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MarketAudienceStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>