force-app/main/default/objects/ssot__MarketAudience__dlm/fields/ssot__MarketingAudienceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MarketingAudienceNumber__c</fullName>
    <label>Marketing Audience Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MarketingAudienceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>