force-app/main/default/objects/ssot__MarketAudience__dlm/fields/ssot__MemberCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberCount__c</fullName>
    <label>Member Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>