force-app/main/default/objects/ssot__MarketAudience__dlm/fields/ssot__Version__c.field-meta.xml
<CustomField>
    <fullName>ssot__Version__c</fullName>
    <label>Version</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Version</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>